--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
+    "@react-three/postprocessing": "^2.16.2",
     "glsl-noise": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
