--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "glsl-noise": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "three": "^0.161.0"
   },
   "devDependencies": {
