--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
     "@react-three/postprocessing": "^2.16.2",
+    "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "glsl-noise": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -33,6 +35,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "glslify": "^7.1.1",
+    "react-error-overlay": "^6.0.9",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.0"
   }
